--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,10 +3,10 @@
 @import "{{ site.theme }}";
 
 body {
-  background: #1D1D1D;
+  background-color: #1D1D1D;
 }
 
 .page-header {
-  background: #171717;
+  background-color: #171717;
   background-image: none;
 }
